feat: implement MongoDB integration with single schema and bcrypt
Major Changes:
- Added MongoDB integration with Mongoose ODM
- Implemented single User schema with embedded role and department data
- Removed separate collections (roles, departments, permissions)
- All DB queries now at service layer (no model layer)
- Bcrypt password hashing with 12 salt rounds
- Database connection pooling (min: 5, max: 20)
- Auth service with login and password change
- MongoDB-specific error handling in controllers
- Database seeding script (npm run seed)
- Works with standalone MongoDB (no replica set required)

New Files:
+ server/src/config/database.js - MongoDB connection management
+ server/src/models/schemas/user.schema.js - Single schema with embedded data
+ server/src/services/auth.service.js - Authentication service
+ server/src/scripts/seed.js - Database seeding
+ server/.env.example - Environment variables template
+ PROJECT_SUMMARY.md - Comprehensive documentation

Modified Files:
* server/src/services/user.service.js - Direct Mongoose queries, no model layer
* server/src/controllers/user.controller.js - MongoDB error handling
* server/src/index.js - Database connection on startup
* server/package.json - Added mongoose, bcrypt, seed script

Deleted Files:
- server/src/models/user.model.js - Removed model layer abstraction

Schema Architecture:
- Single 'users' collection with embedded role/department objects
- Permissions stored as array of strings
- Denormalized structure for better performance
- Reporting hierarchy via reportingManagerId reference

Features:
✅ Bcrypt password hashing (automatic in pre-save hook)
✅ Email and reportCode uniqueness validation
✅ Dependency checks (prevent deleting users with subordinates)
✅ ObjectId validation
✅ Cursor-based pagination
✅ User statistics aggregation
✅ Bulk operations support
✅ Seeding with 10 users (password: password123)

--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,8 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "node --watch src/index.js",
+    "seed": "node src/scripts/seed.js",
+    "seed:force": "NODE_ENV=production node src/scripts/seed.js",
     "lint": "eslint src/",
     "test": "node --test"
   },
@@ -14,11 +16,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^5.2.1",
     "express-rate-limit": "^7.4.1",
     "helmet": "^8.0.0",
+    "mongoose": "^9.1.5",
     "uuid": "^11.0.0"
   },
   "devDependencies": {
