--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,6 @@ bower_components/
 
 # Environment Variables
 .env
-.env.example
 .env.local
 .env.development.local
 .env.test.local
@@ -69,11 +68,11 @@ coverage/
 *.sqlite3
 
 # Agent Configuration Files (Development Rules)
-Agent.md
-Admin.md
-agent.md
-frontend/Agent.md
-server/Agent.md
+# Agent.md
+# Admin.md
+# agent.md
+# frontend/Agent.md
+# server/Agent.md
 
 # Runtime Data
 pids/
